--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1>Java Script</h1>
     
-    <script src="/nd_script.js"></script>
+    <script src="./nd_script.js"></script>
 </body>
 </html>
